docs: 创建附录F TLV数据格式兼容性要求，统一TLV文档引用
- 新增: 附录F-TLV数据格式兼容性要求.md (综合两个TLV文档)
- 更新: 01-方案讨论与分析.md 添加TLV关键原则提示和附录F引用
- 更新: 02-方案确认.md 添加TLV关键原则提示和附录F引用
- 更新: 需求文档v2.md 附录A改为引用附录F，简化内容

关键原则: 必须兼容标准mmWave Demo TLV格式 (Type=1点云)

--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-02-方案确认.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-02-方案确认.md
@@ -7,6 +7,20 @@
 
 ---
 
+## 🔴 关键技术原则：TLV数据格式必须兼容标准Demo
+
+> ⭐ **最高优先级要求**：最终固件**必须使用标准mmWave Demo的TLV格式**（点云Type=1），以确保SDK Visualizer等官方工具可用。
+>
+> 📎 **详见**: [附录F：TLV数据格式兼容性要求](./AWRL6844雷达健康检测-附录F-TLV数据格式兼容性要求.md)
+>
+> | 关键点 | 说明 |
+> |-------|------|
+> | **点云必须Type=1** | 使用标准DETECTED_POINTS格式 |
+> | **扩展从Type=1000开始** | 健康检测专用TLV避开官方范围 |
+> | **禁止使用Type=3001** | InCabin私有格式，SDK Visualizer不兼容 |
+
+---
+
 ## 📑 文档导航
 
 - [第1部分：原始方案确认（2026-01-05）](#1-原始方案确认2026-01-05) - 保留历史决策
@@ -333,7 +347,9 @@ compRangeBiasAndRxChanPhase 0 1 0 1 0 1 0 1 0 -1 0 -1 0 -1 0 -1 0 1 0 1 0 1 0 1 
 - SDK Visualizer无法解析InCabin点云 → 预期内
 - InCabin GUI也显示Points=0 → **说明根本没产生点云**
 
-**详细分析**：见 `../06-SDK固件研究/InCabin与标准Demo数据格式对比.md`
+> 📎 **详细技术分析**: [附录F：TLV数据格式兼容性要求](./AWRL6844雷达健康检测-附录F-TLV数据格式兼容性要求.md)
+>
+> 🔴 **决策影响**：这也是采用方案B的重要原因之一 - 标准mmwave_demo使用Type=1点云格式，**SDK Visualizer直接可用**，开发调试更便利。
 
 ---
 
