--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-01-方案讨论与分析.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-01-方案讨论与分析.md
@@ -9,6 +9,20 @@
 
 ---
 
+## 🔴 关键技术原则：TLV数据格式必须兼容标准Demo
+
+> ⭐ **最高优先级要求**：无论采用哪种方案，最终固件**必须使用标准mmWave Demo的TLV格式**（点云Type=1），以确保SDK Visualizer等官方工具可用。
+>
+> 📎 **详见**: [附录F：TLV数据格式兼容性要求](./AWRL6844雷达健康检测-附录F-TLV数据格式兼容性要求.md)
+>
+> | 关键点 | 说明 |
+> |-------|------|
+> | **点云必须Type=1** | 使用标准DETECTED_POINTS格式 |
+> | **扩展从Type=1000开始** | 健康检测专用TLV避开官方范围 |
+> | **禁止使用Type=3001** | InCabin私有格式，SDK Visualizer不兼容 |
+
+---
+
 ## 1.1 项目目标
 
 ### 1.1.1 功能需求
@@ -397,6 +411,10 @@ InCabin Demo 已有功能              需要添加的功能
 - 需要使用InCabin专用GUI
 - 但InCabin GUI也显示Points=0
 - 说明根本原因是相位校准，不是工具问题
+
+> 📎 **详细技术分析**: [附录F：TLV数据格式兼容性要求](./AWRL6844雷达健康检测-附录F-TLV数据格式兼容性要求.md)
+>
+> 🔴 **决策影响**：这也是采用方案B的重要原因之一 - 标准mmwave_demo使用Type=1点云格式，**SDK Visualizer直接可用**，开发调试更便利。
 
 ---
 
