docs: 创建Part14 TLV数据格式完整指南，合并TLV文档
- 新增: Part14-TLV数据格式与工具兼容性完整指南.md（综合两个TLV文档）
- 删除: InCabin与标准Demo数据格式对比.md（内容已合并到Part14）
- 删除: TLV数据格式快速参考.md（内容已合并到Part14）
- 更新: README.md 修改为14个部分，更新Part14引用
- 更新: 所有引用旧TLV文档的文件，改为指向Part14
  - 附录F、附录C、InCabin失败诊断等文件

文档整合完成，便于统一维护和查阅

--- a/项目文档/2-开发记录/2026-01-07/2026-01-07_InCabin方案实战失败全面诊断.md
+++ b/项目文档/2-开发记录/2026-01-07/2026-01-07_InCabin方案实战失败全面诊断.md
@@ -69,7 +69,7 @@ compRangeBiasAndRxChanPhase 0 1 0 1 0 1 0 1 0 -1 0 -1 0 -1 0 -1 0 1 0 1 0 1 0 1 
 | Occupancy特征 | 无 | Type=3002 | InCabin独有 |
 | Classification结果 | 无 | Type=1041 | InCabin独有 |
 
-**详细分析**：见`06-SDK固件研究/InCabin与标准Demo数据格式对比.md`
+**详细分析**：见`06-SDK固件研究/Part14-TLV数据格式与工具兼容性完整指南.md`
 
 **实际影响**：
 - SDK Visualizer看不到InCabin的点云 → 正常
@@ -466,7 +466,7 @@ Day 5+: 深入开发选定方案
 
 1. **本文档** - InCabin失败全面诊断
 2. **2026-01-07_AWRL6844项目紧急重新评估报告.md** - 决策参考
-3. **InCabin与标准Demo数据格式对比.md** - 技术分析
+3. **Part14-TLV数据格式与工具兼容性完整指南.md** - 技术分析（位于06-SDK固件研究目录）
 
 ---
 
