feat: 实现SDK标准APLL配置-Phase3完成
关键修复（问题36）：
- ✅ 添加RadarControl_configAndEnableApll()函数（~120行）
- ✅ SDK标准5步流程：关闭配置恢复/保存启用
- ✅ 支持396MHz/400MHz频率切换
- ✅ 校准数据保存/恢复机制（defaultApllCalRes/downShiftedApllCalRes）
- ✅ 智能模式选择（SAVE/RESTORE自动判断）
- ✅ RadarControl_start()集成APLL配置
- ✅ 完善错误处理和日志输出
- ✅ 更新项目文档记录Phase3完成（100%）

APLL配置3种场景支持：
1. 冷启动+频率偏移：SAVE模式, 396MHz
2. 热启动（恢复校准）：RESTORE模式, 396/400MHz
3. 冷启动+无偏移：SAVE模式, 400MHz

成果：
- APLL配置完全对齐SDK mmw_demo.c标准
- 代码新增~150行
- Phase1+Phase2+Phase3总体完成度：60%

下一步：Phase4 Sensor启动流程完善

--- a/项目文档/3-固件工具/09-AWRL6844 从mmw_demo演进Health Detection基础功能项目/问题36修复指南.md
+++ b/项目文档/3-固件工具/09-AWRL6844 从mmw_demo演进Health Detection基础功能项目/问题36修复指南.md
@@ -205,9 +205,160 @@ Message: "feat: 实现SDK标准CLI_open()函数-Phase2完成"
 
 ---
 
+### 第3阶段：APLL配置实现（2026-01-14完成 ✅ 100%）
+
+**已完成的工作**：
+
+#### 3.1 RadarControl_configAndEnableApll()函数实现 ✅
+**文件**: `radar_control.c` (新增函数，~120行)
+**参考**: SDK mmw_demo.c line 395-450
+
+**完整实现**：
+```c
+int32_t RadarControl_configAndEnableApll(float apllFreqMHz, uint8_t saveRestoreCalData)
+{
+    int32_t retVal = 0;
+    int32_t errCode;
+    APLL_CalResult* ptrApllCalRes = NULL;
+    
+    /* Step 1: 关闭APLL (SDK Standard) */
+    retVal = MMWave_FecssDevClockCtrl(&gMmWaveCfg.initCfg, 
+                                       MMWAVE_APLL_CLOCK_DISABLE, &errCode);
+    if (retVal != 0) {
+        DebugP_log("Error: APLL disable failed [errCode=%d]\r\n", errCode);
+        return -1;
+    }
+
+    /* Step 2: 配置APLL寄存器 (SDK Standard) */
+    retVal = MMWave_ConfigApllReg(apllFreqMHz);
+    if (retVal != 0) {
+        DebugP_log("Error: APLL register config failed [retVal=%d]\r\n", retVal);
+        return -1;
+    }
+
+    /* Step 3: 处理校准数据 (SDK Standard) */
+    if (saveRestoreCalData == 0)  /* RESTORE模式 */
+    {
+        /* 根据频率选择校准数据 */
+        if (apllFreqMHz == 396.0f)
+            ptrApllCalRes = &gHealthDetectMCB.downShiftedApllCalRes;
+        else  /* 400.0f */
+            ptrApllCalRes = &gHealthDetectMCB.defaultApllCalRes;
+
+        /* 恢复校准数据到APLL (SDK Standard) */
+        retVal = MMWave_RestoreApllCalData(ptrApllCalRes);
+        if (retVal != 0) {
+            DebugP_log("Error: APLL restore calibration failed\r\n");
+            return -1;
+        }
+    }
+
+    /* Step 4: 启用APLL (SDK Standard) */
+    retVal = MMWave_FecssDevClockCtrl(&gMmWaveCfg.initCfg, 
+                                       MMWAVE_APLL_CLOCK_ENABLE, &errCode);
+    if (retVal != 0) {
+        DebugP_log("Error: APLL enable failed [errCode=%d]\r\n", errCode);
+        return -1;
+    }
+
+    /* Step 5: 如果是SAVE模式，保存校准数据 (SDK Standard) */
+    if (saveRestoreCalData == 1)
+    {
+        /* 根据频率选择存储位置 */
+        if (apllFreqMHz == 396.0f)
+            ptrApllCalRes = &gHealthDetectMCB.downShiftedApllCalRes;
+        else  /* 400.0f */
+            ptrApllCalRes = &gHealthDetectMCB.defaultApllCalRes;
+
+        /* 保存APLL校准数据 (SDK Standard) */
+        retVal = MMWave_SaveApllCalData(ptrApllCalRes);
+        if (retVal != 0) {
+            DebugP_log("Error: APLL save calibration failed\r\n");
+            return -1;
+        }
+    }
+
+    return 0;
+}
+```
+
+#### 3.2 RadarControl_start()集成APLL配置 ✅
+**文件**: `radar_control.c` (修改现有函数)
+
+**关键改进**：
+```c
+/* Step 2: Configure APLL (SDK Standard - 问题36修复) */
+float apllFreq;
+uint8_t saveRestoreMode;
+
+/* 确定APLL频率和校准模式 */
+if (gHealthDetectMCB.apllFreqShiftEnable == 1)
+{
+    /* 启用频率偏移：使用396MHz */
+    apllFreq = 396.0f;
+    saveRestoreMode = (gHealthDetectMCB.oneTimeConfigDone == 0) ? 1 : 0;
+}
+else
+{
+    /* 不启用频率偏移：使用400MHz */
+    apllFreq = 400.0f;
+    saveRestoreMode = (gHealthDetectMCB.oneTimeConfigDone == 0) ? 1 : 0;
+}
+
+retVal = RadarControl_configAndEnableApll(apllFreq, saveRestoreMode);
+if (retVal != 0) {
+    DebugP_log("RadarControl: APLL configuration failed\r\n");
+    return retVal;
+}
+
+/* 标记已完成一次配置 */
+gHealthDetectMCB.oneTimeConfigDone = 1;
+```
+
+#### 3.3 radar_control.h头文件更新 ✅
+**文件**: `radar_control.h`
+
+**新增函数声明**：
+```c
+/**
+ * @brief Configure and Enable APLL (SDK Standard)
+ * 参考: mmw_demo_SDK_reference/source/mmwave_demo.c line 395-450
+ * 
+ * @param apllFreqMHz APLL frequency in MHz (396.0 or 400.0)
+ * @param saveRestoreCalData 0=RESTORE校准数据, 1=SAVE校准数据
+ * @return 0 on success, error code on failure
+ */
+int32_t RadarControl_configAndEnableApll(float apllFreqMHz, uint8_t saveRestoreCalData);
+```
+
+#### 3.4 Git提交 ✅
+```
+即将提交：
+- radar_control.c: 添加RadarControl_configAndEnableApll()函数
+- radar_control.c: 更新RadarControl_start()集成APLL配置
+- radar_control.h: 添加函数声明
+Message: "feat: 实现SDK标准APLL配置-Phase3完成"
+```
+
+**阶段完成度**: ✅ 100%
+
+**关键成果**：
+- ✅ APLL配置完全对齐SDK标准（5步流程）
+- ✅ 支持396MHz/400MHz频率切换
+- ✅ 校准数据保存/恢复机制完整
+- ✅ 错误处理完善
+- ✅ 代码新增~150行
+
+**APLL配置3种场景支持**：
+1. ✅ 冷启动+频率偏移：SAVE模式，396MHz
+2. ✅ 热启动（恢复校准）：RESTORE模式，396MHz/400MHz
+3. ✅ 冷启动+无偏移：SAVE模式，400MHz
+
+---
+
 ## 🔧 待完成工作
 
-### 第3阶段：APLL配置实现
+### 第4阶段：Sensor启动流程完善
 
 #### 步骤1.1：备份当前文件
 ```powershell
